--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ annotated-types==0.7.0
 appdirs==1.4.4
 asgiref==3.8.1
 attrs==24.3.0
+beautifulsoup4==4.12.3
 blinker==1.9.0
 blis==1.1.0
+bs4==0.0.2
 catalogue==2.0.10
 certifi==2024.12.14
 charset-normalizer==3.4.1
@@ -16,6 +18,7 @@ cloudpathlib==0.20.0
 confection==0.1.5
 cymem==2.0.10
 datasets==3.2.0
+DateTime==5.5
 dill==0.3.8
 Django==5.1.4
 django-cors-headers==4.6.0
@@ -88,6 +91,7 @@ shapely==2.0.6
 shellingham==1.5.4
 six==1.17.0
 smart-open==7.1.0
+soupsieve==2.6
 spacy==3.8.3
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
@@ -111,3 +115,4 @@ Werkzeug==3.1.3
 wrapt==1.17.0
 xxhash==3.5.0
 yarl==1.18.3
+zope.interface==7.2
